objects/ssot__EmailSendTimeOptimization__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ContactPointEmailId__c</fullName>
        <label>Contact Point Email Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Email Send Time Optimization Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WeekHourOffsetNumber__c</fullName>
        <label>Week Hour Offset</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718549030112_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailSendTimeOptimization_ContactPoi_rel</label>
        <referenceTo>ssot__ContactPointEmail__dlm</referenceTo>
        <relationshipLabel>EmailSendTimeOptimization_ContactPoi_rel</relationshipLabel>
        <relationshipName>rel_1718549030112_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>